feat: Implement item registry search functionality
- Added RegistrySearch class for normalizing and tokenizing search queries, scoring item definitions based on search relevance.
- Introduced RegistrySignPrompter class to handle player interactions with signs for searching and renaming items.
- Created SqliteRepositoryBase for managing SQLite database connections and table creation.
- Refactored ItemRegistryRepository to extend SqliteRepositoryBase, simplifying database initialization and management.
- Added EtherwarpPreviewTask to provide visual feedback for players using specific items while sneaking.
- Implemented ManaRegenerator for automatic mana regeneration for players.
- Created TeleportUtils for calculating safe teleport locations.
- Added utility classes for GitHub interactions, including GitHubClient and GitHubSyncer for syncing data with GitHub repositories.
- Introduced InventoryUtils for managing player inventories and item consumption.
- Added JsonSerializationHelper and NormalizationUtils for JSON handling and name normalization.
- Created UI utility classes for building action bars and menu items.